Fix HTML encoding issues and update content

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </figcaption>
       </figure>
       <figure>
-        <img src="WhatsApp Image 2026-02-06 at 14.34.18.jpeg">
+        <img src="foto2">
         <figcaption>Momen kebersamaan di tengah canda dan tawa.
         <p>
           “Di tengah kesibukan dan rutinitas yang padat, selalu ada waktu di mana kita berkumpul, berbagi cerita, dan tertawa tanpa beban. Canda sederhana sering kali berubah menjadi tawa yang sulit dihentikan, menghapus lelah dan penat. Dari obrolan ringan, candaan spontan, hingga kebersamaan yang tak direncanakan semua momen itu perlahan menjadi kenangan berharga yang akan selalu kita ingat, bahkan saat waktu membawa kita ke jalan yang berbeda.”
@@ -290,3 +290,4 @@ document.addEventListener('click', nextSlide);
 
 </body>
 </html>
+
